# thousand_poems

./: .gitignore  LICENSE  README.md  pyproject.toml
poetry_demo/: 2.0  ImageClassifier.py  ai_chat.py  flask_app.py
poetry_demo/archive/: image_classifier_test.py
poetry_demo/templates/: index.html
thousand_poems/: ImageClassifier.py  ai_chat.py  flask_app.py
thousand_poems/archive/: ollama_run.py
thousand_poems/docs/: uml.plantuml
thousand_poems/static/: style.css
thousand_poems/templates/: index.html
thousand_poems/test/: langchain_run.py  langollama_demo.py
